feat:更新emo表Handler
